subo sqls